//
// Copyright 2019, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.users;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.users";
option java_outer_classname = "IdentifiersProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

// The ID of a user group.
message GroupId {

    string value = 1;
}

// The ID of an organization.
message OrganizationId {

    string value = 1;
}

// The ID of an organizational unit.
message OrgUnitId {

    string value = 1;
}

// The ID of a user directory system.
//
// For example, "google.com", "active-directory.mycompany.co.uk".
//
message DirectoryId {

    string value = 1;
}

// The ID of an organization node. A node is an `Organization` itself or an `OrgUnit`.
//
// An `OrgUnit` is quite similar to an `Organization`, the major difference is that
// an `Organization` has no parent. So, most of the interaction can be performed in
// the same manner for both of them.
//
message OrganizationOrUnit {

    // A kind of a node ID.
    oneof kind {

        // An `OrgUnit`.
        users.OrgUnitId org_unit = 1;

        // An `Organization`.
        users.OrganizationId organization = 2;
    }
}
